--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "kalita-js",
 	"version": "1.0.0",
-	"description": "A JavaScript client with a graphical user interface for Kalita, a text-to-speech software with a focus on data minimization and user privacy.",
+	"description": "A JavaScript client with a graphical user interface for Kalita, a text-to-speech software with a focus on data minimization and user privacy",
 	"private": true,
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack"
+		"build": "rollup -c"
 	},
 	"repository": {
 		"type": "git",
@@ -17,16 +16,10 @@
 		"data-minimization",
 		"text-to-speech"
 	],
-	"contributors": [
-		{
-			"name": "Alexander Ziemke",
-			"email": "alexander.ziemke@ovgu.de"
-		},
-		{
-			"name": "Dominik Blut",
-			"email": "dominik.blut@ovgu.de"
-		}
-	],
+	"author": {
+		"name": "The Kalita Authors",
+		"url": "https://raw.githubusercontent.com/azmke/kalita-js/main/AUTHORS.txt"
+	},
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/azmke/kalita-js/issues"
@@ -35,9 +28,10 @@
 	"devDependencies": {
 		"@babel/core": "^7.13.15",
 		"@babel/preset-env": "^7.13.15",
-		"babel-loader": "^8.2.2",
+		"@rollup/plugin-babel": "^5.3.0",
+		"@rollup/plugin-json": "^4.1.0",
 		"prettier": "2.2.1",
-		"webpack": "^5.31.2",
-		"webpack-cli": "^4.6.0"
+		"rollup": "^2.45.1",
+		"rollup-plugin-terser": "^7.0.2"
 	}
 }
