--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
 	"description": "A JavaScript client with a graphical user interface for Kalita, a text-to-speech software with a focus on data minimization and user privacy",
 	"private": true,
 	"scripts": {
-		"build": "rollup -c"
+		"build": "npm-run-all --parallel js css",
+		"js": "rollup -c --sourcemap",
+		"css": "npm-run-all css-*",
+		"css-compile": "sass src/:build/",
+		"css-prefix": "postcss --replace \"build/*.css\" \"!build/*.min.css\"",
+		"css-minify": "cleancss --source-map -o build/ --batch --batch-suffix \".min\" \"build/*.css\" \"!build/*.min.css\""
 	},
 	"repository": {
 		"type": "git",
@@ -30,8 +35,14 @@
 		"@babel/preset-env": "^7.13.15",
 		"@rollup/plugin-babel": "^5.3.0",
 		"@rollup/plugin-json": "^4.1.0",
+		"autoprefixer": "^10.2.5",
+		"clean-css-cli": "^5.2.2",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.2.10",
+		"postcss-cli": "^8.3.1",
 		"prettier": "2.2.1",
 		"rollup": "^2.45.1",
-		"rollup-plugin-terser": "^7.0.2"
+		"rollup-plugin-terser": "^7.0.2",
+		"sass": "^1.32.8"
 	}
 }
