--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@babel/core": "^7.13.15",
 		"@babel/preset-env": "^7.13.15",
 		"@rollup/plugin-babel": "^5.3.0",
+		"@rollup/plugin-image": "^2.0.6",
 		"@rollup/plugin-json": "^4.1.0",
 		"autoprefixer": "^10.2.5",
 		"clean-css-cli": "^5.2.2",
